AFS_Dev/src/objects/Complexity_Description__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Abbreviated__c</fullName>
        <label>Abbreviated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Values__c</fullName>
        <label>Category Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Complexity_Description</label>
</CustomObject>